--- a/tripledes-main/static/style.css
+++ b/tripledes-main/static/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 body {
     background-color: #475ed2;
     background: url(spy.jpg);
@@ -7,7 +8,7 @@ body {
 }
 
 h1 {
-    font-family: 'Poppins', sans-serif, 'arial';
+    font-family: 'Courgette', cursive;
     font-weight: 600;
     font-size: 72px;
     color: white;
@@ -99,6 +100,8 @@ textarea {
     width: 650px;
     max-width: 100%;
     margin: 20px auto 25px auto;
+    
+    
 }
 
 .submit-btn {
