--- a/tripledes-main/templates/encrypt.html
+++ b/tripledes-main/templates/encrypt.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename = 'style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" 
+        rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" 
+        crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -17,7 +23,7 @@
         <div class="row">
             <h4 style="text-align:center">For your ciphering needs!</h4>
         </div>
-        <div class="row input-container">
+        <div class="row input-container mx-auto">
             <div class="col-xs-12">
                 <div class="styled-input wide">
                     <input type="text" name="name" id="name" required />
@@ -43,11 +49,14 @@
                     <label for="message">Message</label>
                 </div>
             </div>
-            <div class="col-xs-12">
-                <button type="submit" class="btn-lrg submit-btn">Send Message</button>
+            <div class="col">
+                <div class=".col-6 .col-sm-3">
+                    <button type="submit" class="btn-lg submit-btn">Send Message</button>
+                </div>
             </div>
             </form>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
