--- a/tripledes-main/templates/encrypt.html
+++ b/tripledes-main/templates/encrypt.html
@@ -39,7 +39,7 @@
             <div class="col-md-6 col-sm-12">
                 <div class="styled-input" style="float:right;">
                     <input type ="tel" name="phoneNo" id="phoneNo" required />
-                    <label for="phoneNo">Phone Number</label>
+                    <label for="phoneNo">Phone Number(+254...)</label>
                 </div>
             </div>
             
