--- a/tripledes-main/static/style.css
+++ b/tripledes-main/static/style.css
@@ -18,9 +18,9 @@ h1 {
 
 h4 {
     font-family: 'Roboto', sans-serif, 'arial';
-    font-weight: 400;
+    font-weight: 600;
     font-size: 20px;
-    color: white;
+    color: rgb(2, 2, 2);
     line-height: 1.5;
 }
 
@@ -30,7 +30,7 @@ input:focus~label,
 textarea:focus~label,
 input:valid~label,
 textarea:valid~label {
-    font-size: 0.75em;
+    font-size: 1em;
     color: rgb(0, 0, 0);
     top: -5px;
     -webkit-transition: all 0.225s ease;
@@ -108,10 +108,11 @@ textarea {
     float: right;
     padding: 7px 35px;
     border-radius: 60px;
-    display: inline-block;
-    background-color: #4b8cfb;
-    color: white;
+    display: block;
+    background-color: #e25b25;
+    color: rgb(0, 0, 0);
     font-size: 18px;
+    font-family: 'Courgette', cursive;
     cursor: pointer;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06),
         0 2px 10px 0 rgba(0, 0, 0, 0.07);
@@ -119,11 +120,33 @@ textarea {
     transition: all 300ms ease;
 }
 
-.submit-btn:hover {
+/* .encrypt-again-btn {
+    float: left;
+    padding: 7px 35px;
+    border-radius: 60px;
+    display: block;
+    background-color: #df6925;
+    color: rgb(0, 0, 0);
+    font-size: 18px;
+    font-weight: 800;
+    font-family: 'Courgette', cursive;
+    cursor: pointer;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06),
+        0 2px 10px 0 rgba(0, 0, 0, 0.07);
+    -webkit-transition: all 300ms ease;
+    transition: all 300ms ease;
+} */
+
+.submit-btn:hover{
     transform: translateY(1px);
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.10),
+    box-shadow: 0 1px 1px 0 rgba(223, 238, 9, 0.1),
         0 1px 1px 0 rgba(0, 0, 0, 0.09);
 }
+/* .encrypt-again-btn {
+    transform: translateY(2px);
+    box-shadow: 0 2px 2px 0 rgba(9, 223, 238, 0.1),
+        0 1px 1px 0 rgba(0, 0, 0, 0.09);
+} */
 
 @media (max-width: 768px) {
     .submit-btn {
